--- a/Index.html
+++ b/Index.html
@@ -6,20 +6,17 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Area Cellphone</title>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
-        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
-        crossorigin="anonymous"></script>
-     <link rel="stylesheet" href="Assets/CSS/Style.css">
+     <link rel="stylesheet" href="Assets/SASS/main.css">
     </head>
     
     <!-- Cuerpo de la Pagina -->
     <body>  
         <div class="top">
             <header id="head">
-                <a href="Index.html"><h1> AREA CELLPHONE </h1></a>
+                <a href="Index.html">
+                    <h1> AREA CELLPHONE </h1>
+                </a>
+        
             </header>
 
             <nav class="menu">
