Se añade Meta Datos

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="description" content="Venta de Celulares y Accesorios Argentina">
-     <meta name="keywords" content="celulares, accesorios, samsung, xiaomi, motorola, huawei, google pixel">
+     <meta name="keywords" content="celulares, saccesorios, iphone, samsung, xiaomi, motorola, huawei, google pixel">
      <title>Area Cellphone</title>
      <link rel="stylesheet" href="Assets/SASS/main.css">
     </head>
