--- a/Accesorios.html
+++ b/Accesorios.html
@@ -7,9 +7,38 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Area Cellphone</title>
      <link rel="stylesheet" href="Assets/SASS/main.css">
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="Index.html">AREA CELLPHONE</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Index.html">INCIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" <a href="Celulares.html">CELULARES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Accesorios.html">ACCESORIOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Contacto.html">CONTACTO</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     
-    <!-- Cuerpo de la Pagina -->
+    <!-- Cuerpo de la Pagina 
     <body>  
         <div class="top">
             <header id="head">
@@ -29,7 +58,7 @@
                 </ul>
             </nav>
         </div>  
-
+-->
         <main id="tittle">
             <h2>Nuestros Accesorios</h2>
     
@@ -96,6 +125,8 @@
                     <input type="submit" name="boton" value="Comprar">
                 </form>
             </div>
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         </section>
 
 <footer>
