se añade responsive

--- a/Index.html
+++ b/Index.html
@@ -24,16 +24,16 @@
                 <a class="nav-link active" aria-current="page" href="Index.html">INCIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" <a href="Celulares.html">CELULARES</a>
+                <a class="nav-link active" <a href="Celulares.html">CELULARES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Accesorios.html">ACCESORIOS</a>
+                <a class="nav-link active" href="Accesorios.html">ACCESORIOS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Nosotros.html">NOSOTROS</a>
+                <a class="nav-link active" href="Nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="Contacto.html">CONTACTO</a>
+                <a class="nav-link active" href="Contacto.html">CONTACTO</a>
               </li>
             </ul>
           </div>
