--- a/Contacto.html
+++ b/Contacto.html
@@ -15,7 +15,7 @@
     <body>    
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">AREA CELLPHONE</a>
+                <a class="navbar-brand" href="Index.html">AREA CELLPHONE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"          data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -25,16 +25,16 @@
                             <a class="nav-link active" aria-current="page" href="Index.html">INCIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" <a href="celulares.html">CELULARES</a>
+                            <a class="nav-link active" <a href="Celulares.html">CELULARES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="accesorios.html">ACCESORIOS</a>
+                            <a class="nav-link active" href="Accesorios.html">ACCESORIOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="nosotros.html">NOSOTROS</a>
+                            <a class="nav-link active" href="Nosotros.html">NOSOTROS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="contacto.html">CONTACTO</a>
+                            <a class="nav-link active" href="Contacto.html">CONTACTO</a>
                         </li>
                     </ul>
                 </div>
